fixed profile pic scaling on mobile

--- a/src/components/home.css
+++ b/src/components/home.css
@@ -69,15 +69,15 @@ div.hr {
 		margin-right: 0;
 	}
 	#profile-image {
-		max-width: 80%;
-		min-width: 80%;
+		max-width: 100%;
+		min-width: 100%;
 		float: none;
 		margin-top: 0;
 	}
 }
 
 /* tablet portrait layout (801px or less)*/
-@media only screen and (max-width: 801px) {
+@media only screen and (min-width: 481px) and (max-width: 801px) {
 	#profile {
 		margin-right: 0;
 	}
@@ -93,7 +93,7 @@ div.hr {
 }
 
 /* small screens and laptop layout (1024px or less)*/
-@media only screen and (max-width: 1024px) {
+@media only screen and (min-width: 769px) and (max-width: 1024px) {
 	#profile {
 		margin-right: 0;
 	}
